--- a/notebooks/01_data_loading.ipynb
+++ b/notebooks/01_data_loading.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "7922862e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "572e71ad",
    "metadata": {},
    "outputs": [
@@ -84,20 +84,62 @@
        "      <td>CashNetUSA</td>\n",
        "      <td>predatory</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>check_n_go_payday_loan_page.txt</td>\n",
+       "      <td>Check 'n Go</td>\n",
+       "      <td>predatory</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ficus_bank_loan_estimate.txt</td>\n",
+       "      <td>FICUS</td>\n",
+       "      <td>non_predatory</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>idbglobal_personal_loan_disclosure.txt</td>\n",
+       "      <td>IDB Global</td>\n",
+       "      <td>non_predatory</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>msu_disclosure_loan_agreement.txt</td>\n",
+       "      <td>MSU</td>\n",
+       "      <td>non_predatory</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>psecu_consumer_agreement.txt</td>\n",
+       "      <td>PSECU</td>\n",
+       "      <td>non_predatory</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>united_trades_fcu_consumer_loan.txt</td>\n",
+       "      <td>United Trades FCU</td>\n",
+       "      <td>non_predatory</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               filename              source       label\n",
-       "1           speedy_cash_payday_desc.txt         Speedy Cash   predatory\n",
-       "2            big_picture_loans_info.txt   Big Picture Loans   predatory\n",
-       "3        ace_cash_express_loan_page.txt    ACE Cash Express   predatory\n",
-       "4       check_city_payday_loan_info.txt          Check City   predatory\n",
-       "5  cashnetusa_alternative_marketing.txt          CashNetUSA   predatory"
+       "                                  filename              source          label\n",
+       "1              speedy_cash_payday_desc.txt         Speedy Cash      predatory\n",
+       "2               big_picture_loans_info.txt   Big Picture Loans      predatory\n",
+       "3           ace_cash_express_loan_page.txt    ACE Cash Express      predatory\n",
+       "4          check_city_payday_loan_info.txt          Check City      predatory\n",
+       "5     cashnetusa_alternative_marketing.txt          CashNetUSA      predatory\n",
+       "6          check_n_go_payday_loan_page.txt         Check 'n Go      predatory\n",
+       "7             ficus_bank_loan_estimate.txt               FICUS  non_predatory\n",
+       "8   idbglobal_personal_loan_disclosure.txt          IDB Global  non_predatory\n",
+       "9        msu_disclosure_loan_agreement.txt                 MSU  non_predatory\n",
+       "10            psecu_consumer_agreement.txt               PSECU  non_predatory\n",
+       "11     united_trades_fcu_consumer_loan.txt   United Trades FCU  non_predatory"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,52 +147,33 @@
    "source": [
     "# Load labels CSV\n",
     "labels_df = pd.read_csv(\"../data/metadata/data_labels.csv\", names=[\"filename\", \"source\", \"label\"])\n",
+    "\n",
     "# Remove the first row if it contains header information\n",
     "if labels_df.iloc[0, 0] == \"filename\":\n",
     "    labels_df = labels_df.iloc[1:]\n",
-    "labels_df.head()"
+    "\n",
+    "labels_df['label'] = labels_df['label'].str.strip()\n",
+    "\n",
+    "labels_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "3995a602",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../data/raw/loan_documents/non_predatory/speedy_cash_payday_desc.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/speedy_cash_payday_desc.txt\n",
-      "../data/raw/loan_documents/non_predatory/big_picture_loans_info.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/big_picture_loans_info.txt\n",
-      "../data/raw/loan_documents/non_predatory/ace_cash_express_loan_page.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/ace_cash_express_loan_page.txt\n",
-      "../data/raw/loan_documents/non_predatory/check_city_payday_loan_info.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/check_city_payday_loan_info.txt\n",
-      "../data/raw/loan_documents/non_predatory/cashnetusa_alternative_marketing.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/cashnetusa_alternative_marketing.txt\n",
-      "../data/raw/loan_documents/non_predatory/check_n_go_payday_loan_page.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/check_n_go_payday_loan_page.txt\n",
-      "../data/raw/loan_documents/non_predatory/ficus_bank_loan_estimate.txt\n",
-      "../data/raw/loan_documents/non_predatory/idbglobal_personal_loan_disclosure.txt\n",
-      "../data/raw/loan_documents/non_predatory/msu_disclosure_loan_agreement.txt\n",
-      "../data/raw/loan_documents/non_predatory/psecu_consumer_agreement.txt\n",
-      "../data/raw/loan_documents/non_predatory/united_trades_fcu_consumer_loan.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "texts = []\n",
     "\n",
     "for idx, row in labels_df.iterrows():\n",
     "    fname = row[\"filename\"]\n",
     "    label = row[\"label\"]\n",
-    "    folder = \"predatory\" if label == \"predatory\" else \"non_predatory\"\n",
-    "    file_path = os.path.join(\"..\", \"data\", \"raw\", \"loan_documents\", folder, fname)\n",
-    "    \n",
-    "    print(file_path)  # <--- ADD THIS\n",
+    "\n",
+    "    if label == \"predatory\":\n",
+    "        file_path = os.path.join(\"..\", \"data\", \"raw\", \"loan_documents\", \"predatory\", fname)\n",
+    "    else:\n",
+    "        file_path = os.path.join(\"..\", \"data\", \"raw\", \"loan_documents\", \"non_predatory\", fname)\n",
     "\n",
     "    try:\n",
     "        with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
@@ -158,13 +181,14 @@
     "    except FileNotFoundError:\n",
     "        print(f\"File not found: {file_path}\")\n",
     "        text = \"\"\n",
+    "\n",
     "    texts.append(text)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "55086df3",
    "metadata": {},
    "outputs": [
@@ -201,26 +225,111 @@
        "      <td>speedy_cash_payday_desc.txt</td>\n",
        "      <td>Speedy Cash</td>\n",
        "      <td>predatory</td>\n",
-       "      <td></td>\n",
+       "      <td>PAYDAY LOANS\\nConvenient.\\nQuick. Reliable.\\na...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>big_picture_loans_info.txt</td>\n",
        "      <td>Big Picture Loans</td>\n",
        "      <td>predatory</td>\n",
-       "      <td></td>\n",
+       "      <td>\\nBig Picture Loans\\nHomeRequirements\\nRequire...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ace_cash_express_loan_page.txt</td>\n",
+       "      <td>ACE Cash Express</td>\n",
+       "      <td>predatory</td>\n",
+       "      <td>Payday Loans at ACE Cash Express\\nPayday loans...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>check_city_payday_loan_info.txt</td>\n",
+       "      <td>Check City</td>\n",
+       "      <td>predatory</td>\n",
+       "      <td>Payday Loans Online Apply Today!\\nNeed cash be...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>cashnetusa_alternative_marketing.txt</td>\n",
+       "      <td>CashNetUSA</td>\n",
+       "      <td>predatory</td>\n",
+       "      <td>Menu\\nLog In\\nCashNetUSA\\nPayday Loan Alternat...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>check_n_go_payday_loan_page.txt</td>\n",
+       "      <td>Check 'n Go</td>\n",
+       "      <td>predatory</td>\n",
+       "      <td>Skip to main content\\nCheck N Go\\n\\nPayday Loa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ficus_bank_loan_estimate.txt</td>\n",
+       "      <td>FICUS</td>\n",
+       "      <td>non_predatory</td>\n",
+       "      <td>Loan Terms Can this amount increase after clos...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>idbglobal_personal_loan_disclosure.txt</td>\n",
+       "      <td>IDB Global</td>\n",
+       "      <td>non_predatory</td>\n",
+       "      <td>PERSONAL LOANS UNSECURED VARIABLE RATE DISCLOS...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>msu_disclosure_loan_agreement.txt</td>\n",
+       "      <td>MSU</td>\n",
+       "      <td>non_predatory</td>\n",
+       "      <td>FINANCE CHARGES HOW TO COMPUTE THE FINANCE CHA...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>psecu_consumer_agreement.txt</td>\n",
+       "      <td>PSECU</td>\n",
+       "      <td>non_predatory</td>\n",
+       "      <td>ONSUMER CREDIT CARD AGREEMENT AND DISCLOSURE C...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>united_trades_fcu_consumer_loan.txt</td>\n",
+       "      <td>United Trades FCU</td>\n",
+       "      <td>non_predatory</td>\n",
+       "      <td>This Consumer Loan Agreement (“Agreement”) gov...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      filename              source       label text\n",
-       "1  speedy_cash_payday_desc.txt         Speedy Cash   predatory     \n",
-       "2   big_picture_loans_info.txt   Big Picture Loans   predatory     "
+       "                                  filename              source          label  \\\n",
+       "1              speedy_cash_payday_desc.txt         Speedy Cash      predatory   \n",
+       "2               big_picture_loans_info.txt   Big Picture Loans      predatory   \n",
+       "3           ace_cash_express_loan_page.txt    ACE Cash Express      predatory   \n",
+       "4          check_city_payday_loan_info.txt          Check City      predatory   \n",
+       "5     cashnetusa_alternative_marketing.txt          CashNetUSA      predatory   \n",
+       "6          check_n_go_payday_loan_page.txt         Check 'n Go      predatory   \n",
+       "7             ficus_bank_loan_estimate.txt               FICUS  non_predatory   \n",
+       "8   idbglobal_personal_loan_disclosure.txt          IDB Global  non_predatory   \n",
+       "9        msu_disclosure_loan_agreement.txt                 MSU  non_predatory   \n",
+       "10            psecu_consumer_agreement.txt               PSECU  non_predatory   \n",
+       "11     united_trades_fcu_consumer_loan.txt   United Trades FCU  non_predatory   \n",
+       "\n",
+       "                                                 text  \n",
+       "1   PAYDAY LOANS\\nConvenient.\\nQuick. Reliable.\\na...  \n",
+       "2   \\nBig Picture Loans\\nHomeRequirements\\nRequire...  \n",
+       "3   Payday Loans at ACE Cash Express\\nPayday loans...  \n",
+       "4   Payday Loans Online Apply Today!\\nNeed cash be...  \n",
+       "5   Menu\\nLog In\\nCashNetUSA\\nPayday Loan Alternat...  \n",
+       "6   Skip to main content\\nCheck N Go\\n\\nPayday Loa...  \n",
+       "7   Loan Terms Can this amount increase after clos...  \n",
+       "8   PERSONAL LOANS UNSECURED VARIABLE RATE DISCLOS...  \n",
+       "9   FINANCE CHARGES HOW TO COMPUTE THE FINANCE CHA...  \n",
+       "10  ONSUMER CREDIT CARD AGREEMENT AND DISCLOSURE C...  \n",
+       "11  This Consumer Loan Agreement (“Agreement”) gov...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,12 +337,12 @@
    "source": [
     "# Attach the text to your dataframe\n",
     "labels_df['text'] = texts\n",
-    "labels_df.head(2)"
+    "labels_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "31c9f9bf",
    "metadata": {},
    "outputs": [
@@ -247,7 +356,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "dcb1acff",
    "metadata": {},
    "outputs": [],
