Added Reddit and complaints data to training set. Updated data loading notebook

--- a/notebooks/01_data_loading.ipynb
+++ b/notebooks/01_data_loading.ipynb
@@ -367,13 +367,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "dcb1acff",
+   "execution_count": null,
+   "id": "bfbfe3a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save to CSV for later modeling\n",
-    "labels_df.to_csv(\"../data/metadata/loan_texts.csv\", index=False)\n"
+    "reddit_df = pd.read_csv(\"../data/processed/reddit_predatory_loan_posts.csv\")\n",
+    "\n",
+    "#keeping only the relevant columns\n",
+    "reddit_df = reddit_df[['post_text', 'label']]\n",
+    "reddit_df = reddit_df.rename(columns={'post_text': 'text'})\n",
+    "reddit_df['source'] = 'reddit'\n",
+    "reddit_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6029d0ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complaints_df = pd.read_csv(\"../data/processed/complaints(small sample)-2025-04-25_15_02.csv\")\n",
+    "\n",
+    "#keeping only the relevant columns\n",
+    "complaints_df = complaints_df[['Consumer complaint narrative']]\n",
+    "complaints_df = complaints_df.rename(columns={'Consumer complaint narrative': 'text'})\n",
+    "complaints_df['label'] = 'predatory'\n",
+    "complaints_df['source'] = 'complaints'\n",
+    "complaints_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12f953ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#combine all data\n",
+    "# loan_docs_df is the loan documents DataFrame (after loading txt files)\n",
+    "\n",
+    "full_df = pd.concat([\n",
+    "    labels_df[['text', 'label', 'source']],\n",
+    "    reddit_df[['text', 'label', 'source']],\n",
+    "    complaints_df[['text', 'label', 'source']]\n",
+    "], ignore_index=True)\n",
+    "\n",
+    "print(full_df.shape)\n",
+    "full_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2661f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_df.to_csv(\"../data/metadata/full_loan_texts.csv\", index=False)\n"
    ]
   }
  ],
