Added fair loan scrapes and extracted PDFs to dataset; also retrained models with better classification metrics

--- a/notebooks/DS340_seun_notebook.ipynb
+++ b/notebooks/DS340_seun_notebook.ipynb
@@ -18,19 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "7922862e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
-      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Standard Imports\n",
     "import pandas as pd\n",
@@ -59,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "495dd938",
    "metadata": {},
    "outputs": [
@@ -134,7 +125,7 @@
        "4  predatory  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,22 +142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "1ccdffdc",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File not found: ../data/raw/loan_documents/non_predatory/speedy_cash_payday_desc.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/big_picture_loans_info.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/ace_cash_express_loan_page.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/check_city_payday_loan_info.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/cashnetusa_alternative_marketing.txt\n",
-      "File not found: ../data/raw/loan_documents/non_predatory/check_n_go_payday_loan_page.txt\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -195,27 +174,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td></td>\n",
+       "      <td>PAYDAY LOANS\\nConvenient.\\nQuick. Reliable.\\napply now\\nSecure a payday loan\\n\\nSelect your state to see loans and amounts.\\nselect state\\ndouble-cash.svg\\nCONVENIENT\\n\\nWe are 140 locations strong and growing. Plus, we have a team standing by to help you via phone and online lending is availabl...</td>\n",
        "      <td>predatory</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td></td>\n",
+       "      <td>\\nBig Picture Loans\\nHomeRequirements\\nRequirements\\nQualify Online in Minutes! It’s Easy.\\n \\nWe’ve helped more than 400,000 people experience a smarter way to borrow! Even if you’ve applied or been turned down in the past, you can apply again now using our quick and confidential application pr...</td>\n",
        "      <td>predatory</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td></td>\n",
+       "      <td>Payday Loans at ACE Cash Express\\nPayday loans at ACE are a simple, fast, and dependable way to apply for cash.\\n\\nIf approved for a payday loan online, you may be eligible to receive instant funding.\\nApplying for a loan at ACE does not affect your FICO® Score.†\\n\\nHow Do I Apply for a Payday L...</td>\n",
        "      <td>predatory</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td></td>\n",
+       "      <td>Payday Loans Online Apply Today!\\nNeed cash before payday? Apply for payday loans online or visit a store today.\\nApply Now\\nSearch Locations\\nLogin\\n\\nOnline payday loans are a convenient way to get the cash you need from the comfort of your home. Borrow what you need today and pay off the loan...</td>\n",
        "      <td>predatory</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td></td>\n",
+       "      <td>Menu\\nLog In\\nCashNetUSA\\nPayday Loan Alternatives May Offer More Flexibility\\n\\nMassachusetts\\nWhat state do you live in?\\nSorry - we do not currently offer loans in Massachusetts\\n\\n\\n\\nSame-Day Deposit Available\\nIf approved before 1:30 p.m. CT Monday – Friday†\\n\\n\\nInstant Decision*\\nReceive...</td>\n",
        "      <td>predatory</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -223,15 +202,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  text       label\n",
-       "0        predatory\n",
-       "1        predatory\n",
-       "2        predatory\n",
-       "3        predatory\n",
-       "4        predatory"
+       "                                                                                                                                                                                                                                                                                                          text  \\\n",
+       "0  PAYDAY LOANS\\nConvenient.\\nQuick. Reliable.\\napply now\\nSecure a payday loan\\n\\nSelect your state to see loans and amounts.\\nselect state\\ndouble-cash.svg\\nCONVENIENT\\n\\nWe are 140 locations strong and growing. Plus, we have a team standing by to help you via phone and online lending is availabl...   \n",
+       "1  \\nBig Picture Loans\\nHomeRequirements\\nRequirements\\nQualify Online in Minutes! It’s Easy.\\n \\nWe’ve helped more than 400,000 people experience a smarter way to borrow! Even if you’ve applied or been turned down in the past, you can apply again now using our quick and confidential application pr...   \n",
+       "2  Payday Loans at ACE Cash Express\\nPayday loans at ACE are a simple, fast, and dependable way to apply for cash.\\n\\nIf approved for a payday loan online, you may be eligible to receive instant funding.\\nApplying for a loan at ACE does not affect your FICO® Score.†\\n\\nHow Do I Apply for a Payday L...   \n",
+       "3  Payday Loans Online Apply Today!\\nNeed cash before payday? Apply for payday loans online or visit a store today.\\nApply Now\\nSearch Locations\\nLogin\\n\\nOnline payday loans are a convenient way to get the cash you need from the comfort of your home. Borrow what you need today and pay off the loan...   \n",
+       "4  Menu\\nLog In\\nCashNetUSA\\nPayday Loan Alternatives May Offer More Flexibility\\n\\nMassachusetts\\nWhat state do you live in?\\nSorry - we do not currently offer loans in Massachusetts\\n\\n\\n\\nSame-Day Deposit Available\\nIf approved before 1:30 p.m. CT Monday – Friday†\\n\\n\\nInstant Decision*\\nReceive...   \n",
+       "\n",
+       "        label  \n",
+       "0   predatory  \n",
+       "1   predatory  \n",
+       "2   predatory  \n",
+       "3   predatory  \n",
+       "4   predatory  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,16 +236,23 @@
     "    fname = row[\"filename\"]\n",
     "    label = row[\"label\"]\n",
     "\n",
-    "    if label == \"predatory\":\n",
-    "        file_path = os.path.join(\"../data/raw/loan_documents/predatory\", fname)\n",
-    "    else:\n",
-    "        file_path = os.path.join(\"../data/raw/loan_documents/non_predatory\", fname)\n",
+    "    # Always first check predatory folder, then non-predatory folder\n",
+    "    pred_path = os.path.join(\"../data/raw/loan_documents/predatory\", fname)\n",
+    "    nonpred_path = os.path.join(\"../data/raw/loan_documents/non_predatory\", fname)\n",
     "\n",
-    "    try:\n",
+    "    # Try predatory path first\n",
+    "    if os.path.exists(pred_path):\n",
+    "        file_path = pred_path\n",
+    "    elif os.path.exists(nonpred_path):\n",
+    "        file_path = nonpred_path\n",
+    "    else:\n",
+    "        print(f\"File not found in either folder: {fname}\")\n",
+    "        file_path = None\n",
+    "\n",
+    "    if file_path:\n",
     "        with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
     "            text = f.read()\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"File not found: {file_path}\")\n",
+    "    else:\n",
     "        text = \"\"\n",
     "\n",
     "    texts.append(text)\n",
@@ -274,7 +267,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "42f42278",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../data/processed/fair_loan_webpages.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/8m/1v1n1v412nxg01prt846nf_c0000gn/T/ipykernel_25953/1419824608.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Load newly scraped fair loans\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mwebpages_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../data/processed/fair_loan_webpages.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mpdf_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../data/processed/fair_loan_pdfs.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Add labels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[1;32m    946\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    947\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 948\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    949\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    950\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    609\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    610\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 611\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    612\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    613\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m   1446\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1447\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mIOHandles\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1448\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1449\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1450\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, f, engine)\u001b[0m\n\u001b[1;32m   1703\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1704\u001b[0m                     \u001b[0mmode\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"b\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1705\u001b[0;31m             self.handles = get_handle(\n\u001b[0m\u001b[1;32m   1706\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1707\u001b[0m                 \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    861\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    862\u001b[0m             \u001b[0;31m# Encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 863\u001b[0;31m             handle = open(\n\u001b[0m\u001b[1;32m    864\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    865\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/processed/fair_loan_webpages.csv'"
+     ]
+    }
+   ],
+   "source": [
+    "# Load newly scraped fair loans\n",
+    "webpages_df = pd.read_csv(\"../data/processed/fair_loan_texts.csv\")\n",
+    "pdf_df = pd.read_csv(\"../data/processed/fair_loan_pdfs.csv\")\n",
+    "\n",
+    "# Add labels\n",
+    "webpages_df['label'] = 'non_predatory'\n",
+    "pdf_df['label'] = 'non_predatory'\n",
+    "\n",
+    "webpages_df = webpages_df[['text', 'label']]\n",
+    "pdf_df = pdf_df[['text', 'label']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "81728d10",
    "metadata": {},
    "outputs": [
@@ -361,12 +390,14 @@
    ],
    "source": [
     "# Combine everything\n",
-    "full_df = pd.concat([loan_docs_df, reddit_df], axis=0).reset_index(drop=True)\n",
-    "full_df = full_df.dropna(subset=[\"text\"])  # Drop empty texts\n",
+    "full_df = pd.concat([loan_docs_df, reddit_df, webpages_df, pdf_df], axis=0).reset_index(drop=True)\n",
     "\n",
+    "# Quick check\n",
     "print(full_df.shape)\n",
     "print(full_df['label'].value_counts())\n",
     "\n",
+    "# Save combined dataset\n",
+    "full_df.to_csv(\"../data/processed/full_dataset.csv\", index=False)\n",
     "full_df.head()"
    ]
   },
