--- a/notebooks/DS340_seun_notebook.ipynb
+++ b/notebooks/DS340_seun_notebook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "7922862e",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "495dd938",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "42f42278",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "81728d10",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "2ee5d60a",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "6d709d54",
    "metadata": {},
    "outputs": [],
@@ -156,20 +156,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "ef3a3c63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save cleaned full_df\n",
+    "full_df.to_csv(\"../data/processed/full_dataset_final.csv\", index=False)\n",
+    "full_df[['text', 'text_clean', 'label']].to_csv(\"../data/processed/full_dataset_with_cleaned.csv\", index=False)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "58ae8200",
    "metadata": {},
    "source": [
     "## 3: ML Modeling"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e9d39da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
